clusters/apps/env/production/soho/bitwarden/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bitwarden
spec:
  hosts:
    - 'bitwarden.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            port:
              number: 80
            host: bitwarden-vaultwarden.soho.svc.cluster.local
          weight: 100
    - match:
        - uri:
            exact: /notifications/hub/negotiate
      route:
        - destination:
            port:
              number: 80
            host: bitwarden-vaultwarden.soho.svc.cluster.local
          weight: 100
    - match:
        - uri:
            exact: /notifications/hub
      route:
        - destination:
            port:
              number: 80
            host: bitwarden-vaultwarden.soho.svc.cluster.local
          weight: 100
